# dro

./: .gitignore  Cargo.toml  README.md  test-db.sql
.github/scripts/: create-homebrew-formula.sh  get-version.sh  package-homebrew-release.sh  prepare-homebrew-package.sh
.github/workflows/: publish-to-cargo.yml  publish-to-homebrew.yml  run-tests.yml
Formula/: dro.rb
src/: app.rs  core.rs  main.rs
src/app/: bash_driver.rs  db.rs  utils.rs
src/core/: db.rs  ui.rs
