[package]
name = "dro"
version = "0.2.8"
edition = "2021"
license = "MIT OR Apache-2.0" 
description = "Super minimal CLI todo (dro) application."
repository = "https://github.com/anthonwellsjo/dro"
keywords = ["cli", "todo", "dro", "minimal", "bash_life"]
include = [
    "**/*.rs",
    "Cargo.toml",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arw_brr = "0.1.3"
rusqlite = "0.28.0"

[dev-dependencies]
rand = "0.8.5"
