[package]
name = "dro"
version = "0.2.9"
edition = "2021"
license = "MIT OR Apache-2.0" 
description = "Super minimal CLI todo (dro) application."
repository = "https://github.com/anthonwellsjo/dro"
keywords = ["cli", "todo", "dro", "minimal", "bash_life"]
include = [
    "**/*.rs",
    "Cargo.toml",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arw_brr = {version = "0.1.4", path = "../arw_brr"}
dirs = "4.0.0"
rusqlite = "0.28.0"

[dev-dependencies]
rand = "0.8.5"
